
SUFFIXES=.html
mode=html4

.html.c:
	$(top_builddir)/template_gen.pl $<

pkglib_LTLIBRARIES+=html4_arcmonthlist.la
html4_arcmonthlist_la_SOURCES=arcmonthlist.c
html4_arcmonthlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcmonths.la
html4_arcmonths_la_SOURCES=arcmonths.c
html4_arcmonths_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcperthread.la
html4_arcperthread_la_SOURCES=arcperthread.c
html4_arcperthread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcthread.la
html4_arcthread_la_SOURCES=arcthread.c
html4_arcthread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcthreadlist.la
html4_arcthreadlist_la_SOURCES=arcthreadlist.c
html4_arcthreadlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcthreadlist_month.la
html4_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
html4_arcthreadlist_month_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcyearlist.la
html4_arcyearlist_la_SOURCES=arcyearlist.c
html4_arcyearlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_arcyears.la
html4_arcyears_la_SOURCES=arcyears.c
html4_arcyears_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_blank.la
html4_blank_la_SOURCES=blank.c
html4_blank_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_cats.la
html4_cats_la_SOURCES=cats.c
html4_cats_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_chpass.la
html4_chpass_la_SOURCES=chpass.c
html4_chpass_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_chpassok.la
html4_chpassok_la_SOURCES=chpassok.c
html4_chpassok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_errortpl.la
html4_errortpl_la_SOURCES=errortpl.c
html4_errortpl_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_fatal.la
html4_fatal_la_SOURCES=fatal.c
html4_fatal_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_forum_begin.la
html4_forum_begin_la_SOURCES=forum_begin.c
html4_forum_begin_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_forum_end.la
html4_forum_end_la_SOURCES=forum_end.c
html4_forum_end_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_forum_posting.la
html4_forum_posting_la_SOURCES=forum_posting.c
html4_forum_posting_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_forum_thread.la
html4_forum_thread_la_SOURCES=forum_thread.c
html4_forum_thread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_frameset.la
html4_frameset_la_SOURCES=frameset.c
html4_frameset_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_post_ok.la
html4_post_ok_la_SOURCES=post_ok.c
html4_post_ok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_setting.la
html4_setting_la_SOURCES=setting.c
html4_setting_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_thread.la
html4_thread_la_SOURCES=thread.c
html4_thread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_unreg.la
html4_unreg_la_SOURCES=unreg.c
html4_unreg_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_unregok.la
html4_unregok_la_SOURCES=unregok.c
html4_unregok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_updown.la
html4_updown_la_SOURCES=updown.c
html4_updown_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_useredit.la
html4_useredit_la_SOURCES=useredit.c
html4_useredit_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_usereditok.la
html4_usereditok_la_SOURCES=usereditok.c
html4_usereditok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_userregister.la
html4_userregister_la_SOURCES=userregister.c
html4_userregister_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_userregok.la
html4_userregok_la_SOURCES=userregok.c
html4_userregok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_usersettings.la
html4_usersettings_la_SOURCES=usersettings.c
html4_usersettings_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_pageentry.la
html4_pageentry_la_SOURCES=pageentry.c
html4_pageentry_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=html4_section.la
html4_section_la_SOURCES=section.c
html4_section_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
html4_section_la_LDFLAGS=-module -export-dynamic -avoid-version


# eof
