
SUFFIXES=.html
mode=xhtml10

.html.c:
	$(top_builddir)/template_gen.pl $<

pkglib_LTLIBRARIES+=xhtml10_arcmonthlist.la
xhtml10_arcmonthlist_la_SOURCES=arcmonthlist.c
xhtml10_arcmonthlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcmonths.la
xhtml10_arcmonths_la_SOURCES=arcmonths.c
xhtml10_arcmonths_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcperthread.la
xhtml10_arcperthread_la_SOURCES=arcperthread.c
xhtml10_arcperthread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcthread.la
xhtml10_arcthread_la_SOURCES=arcthread.c
xhtml10_arcthread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcthreadlist.la
xhtml10_arcthreadlist_la_SOURCES=arcthreadlist.c
xhtml10_arcthreadlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcthreadlist_month.la
xhtml10_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
xhtml10_arcthreadlist_month_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcyearlist.la
xhtml10_arcyearlist_la_SOURCES=arcyearlist.c
xhtml10_arcyearlist_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_arcyears.la
xhtml10_arcyears_la_SOURCES=arcyears.c
xhtml10_arcyears_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_blank.la
xhtml10_blank_la_SOURCES=blank.c
xhtml10_blank_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_cats.la
xhtml10_cats_la_SOURCES=cats.c
xhtml10_cats_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_chpass.la
xhtml10_chpass_la_SOURCES=chpass.c
xhtml10_chpass_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_chpassok.la
xhtml10_chpassok_la_SOURCES=chpassok.c
xhtml10_chpassok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_errortpl.la
xhtml10_errortpl_la_SOURCES=errortpl.c
xhtml10_errortpl_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_fatal.la
xhtml10_fatal_la_SOURCES=fatal.c
xhtml10_fatal_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_forum_begin.la
xhtml10_forum_begin_la_SOURCES=forum_begin.c
xhtml10_forum_begin_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_forum_end.la
xhtml10_forum_end_la_SOURCES=forum_end.c
xhtml10_forum_end_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_forum_posting.la
xhtml10_forum_posting_la_SOURCES=forum_posting.c
xhtml10_forum_posting_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_forum_thread.la
xhtml10_forum_thread_la_SOURCES=forum_thread.c
xhtml10_forum_thread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_frameset.la
xhtml10_frameset_la_SOURCES=frameset.c
xhtml10_frameset_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_post_ok.la
xhtml10_post_ok_la_SOURCES=post_ok.c
xhtml10_post_ok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_setting.la
xhtml10_setting_la_SOURCES=setting.c
xhtml10_setting_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_thread.la
xhtml10_thread_la_SOURCES=thread.c
xhtml10_thread_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_unreg.la
xhtml10_unreg_la_SOURCES=unreg.c
xhtml10_unreg_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_unregok.la
xhtml10_unregok_la_SOURCES=unregok.c
xhtml10_unregok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_updown.la
xhtml10_updown_la_SOURCES=updown.c
xhtml10_updown_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_useredit.la
xhtml10_useredit_la_SOURCES=useredit.c
xhtml10_useredit_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_usereditok.la
xhtml10_usereditok_la_SOURCES=usereditok.c
xhtml10_usereditok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_userregister.la
xhtml10_userregister_la_SOURCES=userregister.c
xhtml10_userregister_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_userregok.la
xhtml10_userregok_la_SOURCES=userregok.c
xhtml10_userregok_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_usersettings.la
xhtml10_usersettings_la_SOURCES=usersettings.c
xhtml10_usersettings_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_pageentry.la
xhtml10_pageentry_la_SOURCES=pageentry.c
xhtml10_pageentry_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=xhtml10_section.la
xhtml10_section_la_SOURCES=section.c
xhtml10_section_la_LIBADD=$(top_builddir)/src/libcfutils.la $(top_builddir)/src/libcftemplate.la
xhtml10_section_la_LDFLAGS=-module -export-dynamic -avoid-version

# eof
