
SUFFIXES=.html

.html.c:
	${top_builddir}/scripts/template_gen.pl $<

pkglib_LTLIBRARIES+=de_html4_arcmonthlist.la
de_html4_arcmonthlist_la_SOURCES=arcmonthlist.c
de_html4_arcmonthlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcmonths.la
de_html4_arcmonths_la_SOURCES=arcmonths.c
de_html4_arcmonths_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcperthread.la
de_html4_arcperthread_la_SOURCES=arcperthread.c
de_html4_arcperthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcthread.la
de_html4_arcthread_la_SOURCES=arcthread.c
de_html4_arcthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcthreadlist.la
de_html4_arcthreadlist_la_SOURCES=arcthreadlist.c
de_html4_arcthreadlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcthreadlist_month.la
de_html4_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
de_html4_arcthreadlist_month_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcyearlist.la
de_html4_arcyearlist_la_SOURCES=arcyearlist.c
de_html4_arcyearlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_arcyears.la
de_html4_arcyears_la_SOURCES=arcyears.c
de_html4_arcyears_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_blank.la
de_html4_blank_la_SOURCES=blank.c
de_html4_blank_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_cats.la
de_html4_cats_la_SOURCES=cats.c
de_html4_cats_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_chpass.la
de_html4_chpass_la_SOURCES=chpass.c
de_html4_chpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_chpassok.la
de_html4_chpassok_la_SOURCES=chpassok.c
de_html4_chpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_errortpl.la
de_html4_errortpl_la_SOURCES=errortpl.c
de_html4_errortpl_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_fatal.la
de_html4_fatal_la_SOURCES=fatal.c
de_html4_fatal_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_forum_begin.la
de_html4_forum_begin_la_SOURCES=forum_begin.c
de_html4_forum_begin_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_forum_end.la
de_html4_forum_end_la_SOURCES=forum_end.c
de_html4_forum_end_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_forum_posting.la
de_html4_forum_posting_la_SOURCES=forum_posting.c
de_html4_forum_posting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_forum_thread.la
de_html4_forum_thread_la_SOURCES=forum_thread.c
de_html4_forum_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_frameset.la
de_html4_frameset_la_SOURCES=frameset.c
de_html4_frameset_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_post_ok.la
de_html4_post_ok_la_SOURCES=post_ok.c
de_html4_post_ok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_setting.la
de_html4_setting_la_SOURCES=setting.c
de_html4_setting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_thread.la
de_html4_thread_la_SOURCES=thread.c
de_html4_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_unreg.la
de_html4_unreg_la_SOURCES=unreg.c
de_html4_unreg_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_unregok.la
de_html4_unregok_la_SOURCES=unregok.c
de_html4_unregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_updown.la
de_html4_updown_la_SOURCES=updown.c
de_html4_updown_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_useredit.la
de_html4_useredit_la_SOURCES=useredit.c
de_html4_useredit_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_usereditok.la
de_html4_usereditok_la_SOURCES=usereditok.c
de_html4_usereditok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_userregister.la
de_html4_userregister_la_SOURCES=userregister.c
de_html4_userregister_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_userregok.la
de_html4_userregok_la_SOURCES=userregok.c
de_html4_userregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_usersettings.la
de_html4_usersettings_la_SOURCES=usersettings.c
de_html4_usersettings_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_pageentry.la
de_html4_pageentry_la_SOURCES=pageentry.c
de_html4_pageentry_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_section.la
de_html4_section_la_SOURCES=section.c
de_html4_section_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_section_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_sendpass.la
de_html4_sendpass_la_SOURCES=sendpass.c
de_html4_sendpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_sendpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_html4_sendpassok.la
de_html4_sendpassok_la_SOURCES=sendpassok.c
de_html4_sendpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_html4_sendpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

# eof
