
SUFFIXES=.html

.html.c:
	${top_builddir}/scripts/template_gen.pl $<

pkglib_LTLIBRARIES=de_xhtml10_arcmonthlist.la
de_xhtml10_arcmonthlist_la_SOURCES=arcmonthlist.c
de_xhtml10_arcmonthlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcmonths.la
de_xhtml10_arcmonths_la_SOURCES=arcmonths.c
de_xhtml10_arcmonths_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcperthread.la
de_xhtml10_arcperthread_la_SOURCES=arcperthread.c
de_xhtml10_arcperthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcthread.la
de_xhtml10_arcthread_la_SOURCES=arcthread.c
de_xhtml10_arcthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcthreadlist.la
de_xhtml10_arcthreadlist_la_SOURCES=arcthreadlist.c
de_xhtml10_arcthreadlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcthreadlist_month.la
de_xhtml10_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
de_xhtml10_arcthreadlist_month_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcyearlist.la
de_xhtml10_arcyearlist_la_SOURCES=arcyearlist.c
de_xhtml10_arcyearlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_arcyears.la
de_xhtml10_arcyears_la_SOURCES=arcyears.c
de_xhtml10_arcyears_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_blank.la
de_xhtml10_blank_la_SOURCES=blank.c
de_xhtml10_blank_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_cats.la
de_xhtml10_cats_la_SOURCES=cats.c
de_xhtml10_cats_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_chpass.la
de_xhtml10_chpass_la_SOURCES=chpass.c
de_xhtml10_chpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_chpassok.la
de_xhtml10_chpassok_la_SOURCES=chpassok.c
de_xhtml10_chpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_errortpl.la
de_xhtml10_errortpl_la_SOURCES=errortpl.c
de_xhtml10_errortpl_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_fatal.la
de_xhtml10_fatal_la_SOURCES=fatal.c
de_xhtml10_fatal_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_forum_begin.la
de_xhtml10_forum_begin_la_SOURCES=forum_begin.c
de_xhtml10_forum_begin_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_forum_end.la
de_xhtml10_forum_end_la_SOURCES=forum_end.c
de_xhtml10_forum_end_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_forum_posting.la
de_xhtml10_forum_posting_la_SOURCES=forum_posting.c
de_xhtml10_forum_posting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_forum_thread.la
de_xhtml10_forum_thread_la_SOURCES=forum_thread.c
de_xhtml10_forum_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_frameset.la
de_xhtml10_frameset_la_SOURCES=frameset.c
de_xhtml10_frameset_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_post_ok.la
de_xhtml10_post_ok_la_SOURCES=post_ok.c
de_xhtml10_post_ok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_setting.la
de_xhtml10_setting_la_SOURCES=setting.c
de_xhtml10_setting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_thread.la
de_xhtml10_thread_la_SOURCES=thread.c
de_xhtml10_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_unreg.la
de_xhtml10_unreg_la_SOURCES=unreg.c
de_xhtml10_unreg_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_unregok.la
de_xhtml10_unregok_la_SOURCES=unregok.c
de_xhtml10_unregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_updown.la
de_xhtml10_updown_la_SOURCES=updown.c
de_xhtml10_updown_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_useredit.la
de_xhtml10_useredit_la_SOURCES=useredit.c
de_xhtml10_useredit_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_usereditok.la
de_xhtml10_usereditok_la_SOURCES=usereditok.c
de_xhtml10_usereditok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_userregister.la
de_xhtml10_userregister_la_SOURCES=userregister.c
de_xhtml10_userregister_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_userregok.la
de_xhtml10_userregok_la_SOURCES=userregok.c
de_xhtml10_userregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_usersettings.la
de_xhtml10_usersettings_la_SOURCES=usersettings.c
de_xhtml10_usersettings_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_pageentry.la
de_xhtml10_pageentry_la_SOURCES=pageentry.c
de_xhtml10_pageentry_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_section.la
de_xhtml10_section_la_SOURCES=section.c
de_xhtml10_section_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_section_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_sendpass.la
de_xhtml10_sendpass_la_SOURCES=sendpass.html
de_xhtml10_sendpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_sendpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_sendpassok.la
de_xhtml10_sendpassok_la_SOURCES=sendpassok.html
de_xhtml10_sendpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_sendpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_vote_ok.la
de_xhtml10_vote_ok_la_SOURCES=vote_ok.html
de_xhtml10_vote_ok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_vote_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_importform.la
de_xhtml10_importform_la_SOURCES=importform.c
de_xhtml10_importform_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_importform_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=de_xhtml10_importok.la
de_xhtml10_importok_la_SOURCES=importok.c
de_xhtml10_importok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
de_xhtml10_importok_la_LDFLAGS=-module -export-dynamic -avoid-version


# eof
