
SUFFIXES=.html

.html.c:
	${top_builddir}/template_gen.pl $<

pkglib_LTLIBRARIES+=fr_html4_arcmonthlist.la
fr_html4_arcmonthlist_la_SOURCES=arcmonthlist.c
fr_html4_arcmonthlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcmonthlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcmonths.la
fr_html4_arcmonths_la_SOURCES=arcmonths.c
fr_html4_arcmonths_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcmonths_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcperthread.la
fr_html4_arcperthread_la_SOURCES=arcperthread.c
fr_html4_arcperthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcperthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcthread.la
fr_html4_arcthread_la_SOURCES=arcthread.c
fr_html4_arcthread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcthread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcthreadlist.la
fr_html4_arcthreadlist_la_SOURCES=arcthreadlist.c
fr_html4_arcthreadlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcthreadlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcthreadlist_month.la
fr_html4_arcthreadlist_month_la_SOURCES=arcthreadlist_month.c
fr_html4_arcthreadlist_month_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcthreadlist_month_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcyearlist.la
fr_html4_arcyearlist_la_SOURCES=arcyearlist.c
fr_html4_arcyearlist_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcyearlist_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_arcyears.la
fr_html4_arcyears_la_SOURCES=arcyears.c
fr_html4_arcyears_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_arcyears_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_blank.la
fr_html4_blank_la_SOURCES=blank.c
fr_html4_blank_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_blank_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_cats.la
fr_html4_cats_la_SOURCES=cats.c
fr_html4_cats_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_cats_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_chpass.la
fr_html4_chpass_la_SOURCES=chpass.c
fr_html4_chpass_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_chpass_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_chpassok.la
fr_html4_chpassok_la_SOURCES=chpassok.c
fr_html4_chpassok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_chpassok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_errortpl.la
fr_html4_errortpl_la_SOURCES=errortpl.c
fr_html4_errortpl_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_errortpl_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_fatal.la
fr_html4_fatal_la_SOURCES=fatal.c
fr_html4_fatal_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_fatal_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_forum_begin.la
fr_html4_forum_begin_la_SOURCES=forum_begin.c
fr_html4_forum_begin_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_forum_begin_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_forum_end.la
fr_html4_forum_end_la_SOURCES=forum_end.c
fr_html4_forum_end_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_forum_end_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_forum_posting.la
fr_html4_forum_posting_la_SOURCES=forum_posting.c
fr_html4_forum_posting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_forum_posting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_forum_thread.la
fr_html4_forum_thread_la_SOURCES=forum_thread.c
fr_html4_forum_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_forum_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_frameset.la
fr_html4_frameset_la_SOURCES=frameset.c
fr_html4_frameset_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_frameset_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_post_ok.la
fr_html4_post_ok_la_SOURCES=post_ok.c
fr_html4_post_ok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_post_ok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_setting.la
fr_html4_setting_la_SOURCES=setting.c
fr_html4_setting_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_setting_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_thread.la
fr_html4_thread_la_SOURCES=thread.c
fr_html4_thread_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_thread_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_unreg.la
fr_html4_unreg_la_SOURCES=unreg.c
fr_html4_unreg_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_unreg_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_unregok.la
fr_html4_unregok_la_SOURCES=unregok.c
fr_html4_unregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_unregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_updown.la
fr_html4_updown_la_SOURCES=updown.c
fr_html4_updown_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_updown_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_useredit.la
fr_html4_useredit_la_SOURCES=useredit.c
fr_html4_useredit_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_useredit_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_usereditok.la
fr_html4_usereditok_la_SOURCES=usereditok.c
fr_html4_usereditok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_usereditok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_userregister.la
fr_html4_userregister_la_SOURCES=userregister.c
fr_html4_userregister_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_userregister_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_userregok.la
fr_html4_userregok_la_SOURCES=userregok.c
fr_html4_userregok_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_userregok_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_usersettings.la
fr_html4_usersettings_la_SOURCES=usersettings.c
fr_html4_usersettings_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_usersettings_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_pageentry.la
fr_html4_pageentry_la_SOURCES=pageentry.c
fr_html4_pageentry_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_pageentry_la_LDFLAGS=-module -export-dynamic -avoid-version

pkglib_LTLIBRARIES+=fr_html4_section.la
fr_html4_section_la_SOURCES=section.c
fr_html4_section_la_LIBADD=../../../libcfutils.la ../../../libcftemplate.la
fr_html4_section_la_LDFLAGS=-module -export-dynamic -avoid-version


# eof
